--- a/hadoop/modules/hadoop/templates/mapred-site.xml
+++ b/hadoop/modules/hadoop/templates/mapred-site.xml
@@ -7,9 +7,14 @@
     <value><%= @hadoop_master %>:9001</value>
     <description>The host and port that the MapReduce job tracker runs at.</description>
   </property>
--->
+
   <property>
     <name>mapreduce.framework.name</name>
     <value>yarn</value>
+  </property>
+-->
+  <property>
+    <name>mapreduce.framework.name</name>
+    <value>local</value>
   </property>
 </configuration>
