--- a/hadoop/modules/hadoop/templates/core-site.xml
+++ b/hadoop/modules/hadoop/templates/core-site.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0"?>
 <?xml-stylesheet type="text/xsl" href="configuration.xsl"?>
 <configuration>
-  <property>
+	<property>
+    <name>hadoop.tmp.dir</name>
+    <value>/opt/hadoop-2.6.0/tmp</value>
+    <description>Avoid problem of erasing system temp</description>
+  </property>
   <!--
+  <property>
     <name>fs.default.name</name>
     <value>hdfs://<%= @hadoop_master %>:9000</value>
     <description>The name of the default file system. A URI whose scheme and authority determine the FileSystem implementation.</description>
   -->
+  <property>
     <name>fs.defaultFS</name>
     <value>hdfs://localhost:9000</value>
   </property>
